--- a/components/cc-markdown/demohn-md.css
+++ b/components/cc-markdown/demohn-md.css
@@ -8,7 +8,7 @@
     padding-right: 3%;
 
     /*font*/
-    font-family: "Droid Sans","Microsoft YaHei","Microsoft YZhengHei","DejaVu Sans Mono","Arial";
+    font-family:"Arial", "Droid Sans","Microsoft YaHei","Microsoft YZhengHei","DejaVu Sans Mono","WenQuanYi MicroHei";
     font-size: 15px;
     margin-top:0;
     margin-bottom:0.4em;
