--- a/__doc__/app/main.css
+++ b/__doc__/app/main.css
@@ -2,8 +2,9 @@
     padding:0;
     margin:0;
     font-size: 16px;
-    font-family: "Consolas","Microsoft YaHei";
+    font-family: "Consolas","WenQuanYi MicroHei","Microsoft YaHei";
 }
+
 div.left{
     height: 100%;
     position: fixed;
