--- a/__doc__/app/main.css
+++ b/__doc__/app/main.css
@@ -11,13 +11,13 @@ div.left{
     width:25%;
     float:left;
     box-sizing:border-box;
+    border-right:1px solid blue;
 }
 
 div.document{
     float:left;
     width:75%;
     margin-left:25%;
-    border-left:blue 1px solid;    
     position: relative;
     height:100%;
     box-sizing:border-box;
