--- a/components/codepad/codepad.html
+++ b/components/codepad/codepad.html
@@ -5,8 +5,6 @@
 <polymer-element name="code-pad" attributes="mode theme">
     <template>
         <style>
-        polyfill-next-selector{content:":host #codepad";}
-
         #codepad .CodeMirror, #codepad pre{
             font-family: "Consolas";
         }
@@ -18,7 +16,7 @@
     <script>
     var that = this;
     Polymer('code-pad',{
-        Value:"fff",
+        Value:"",
         ready:function(){
             var cm = CodeMirror(this.$.codepad,{
                 value:this.Value,
